--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# eclipse files
+.project
+.classpath
+
+#test results
+TEST-*
+
+build/
+pmd_report.html
+
+.settings/
