--- a/.classpath
+++ b/.classpath
@@ -4,19 +4,19 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/vorbisspi1.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/tritonus_share.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/substance.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/mp3spi1.9.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/kj_dsp1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jspeex0.9.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jml-1.0b4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jmactritonusspi1.74.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jl1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/jflac-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/commons-logging-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Gibson/workspace/algocraft/libs/audio/basicplayer3.0.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/vorbisspi1.0.2.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/tritonus_share.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/substance.jar"></classpathentry>
+	<classpathentry kind="lib" path="algocraft/libs/audio/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/kj_dsp1.1.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jspeex0.9.7.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jorbis-0.0.15.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jml-1.0b4.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jmactritonusspi1.74.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jl1.0.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/jflac-1.2.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/commons-logging-api.jar"/>
+	<classpathentry kind="lib" path="algocraft/libs/audio/basicplayer3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
