--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="algocraft" basedir="." default="integracion-continua">
 	<property name="build" location="build" />
 	<property name="libs" location="libs" />
-	<property name="audio.libs" location="audio/lib" />
+	<property name="audio.libs" location="vendor/lib" />
 	<property name="classes.dir" location="build" />
 	<property name="instrumented.dir" location="${build}/instrumented" />
 	<property name="cobertura.dir" location="${libs}" />
@@ -28,20 +28,17 @@
 		<fileset dir="${libs}">
 			<include name="*.jar" />
 		</fileset>
-		
-		
-		
 		<pathelement location="${build}" />
 		<pathelement location="${instrumented.dir}" />
 		<pathelement location="${build}/tests" />
 	</path>
-	
+
 	<path id="audio.path">
-	
+
 		<fileset dir="${audio.libs}">
 			<include name="**/*.jar" />
 		</fileset>
-		
+
 	</path>
 
 	<path id="cobertura.classpath">
@@ -56,7 +53,7 @@
 			<include name="*.jar" />
 		</fileset>
 	</path>
-	
+
 	<target name="setup">
 		<delete dir="${build}" />
 		<mkdir dir="${build}" />
@@ -87,7 +84,7 @@
 			<classpath refid="cobertura.classpath" />
 			<classpath refid="classpath" />
 			<classpath refid="audio.path" />
-			
+
 			<formatter type="xml" />
 			<test name="${testcase}" todir="${reports.xml.dir}" if="testcase" />
 			<batchtest todir="${reports.xml.dir}" unless="testcase">
@@ -144,7 +141,7 @@
 	</target>
 
 	<target name="test" depends="ejecutar.tests" description="Compile, instrument ourself, run the tests and generate JUnit and coverage reports." />
-	
+
 
 	<target name="compilar.paquete" depends="test">
 		<javac srcdir="src" destdir="${build}/classes" debug="no">
@@ -152,14 +149,14 @@
 			<classpath refid="audio.path" />
 		</javac>
 	</target>
-	
+
 	<target name="empaquetar.con.assets" depends="compilar.paquete">
 			<copy todir="${build}/classes/assets">
 		 		<fileset dir="${assets.dir}" includes="**"/>
 			</copy>
 			<jar destfile="${build}/dist/ProgramaPrincipal.jar" basedir="${build}/classes"/>
 	</target>
-	
+
 	<target name="jugar" depends="empaquetar.con.assets">
 		<java classname="vistas.Aplicacion" fork="true">
 			<classpath refid="classpath" />
@@ -173,7 +170,7 @@
 	<!-- Ivy installation -->
 	<target name="download-ivy" unless="skip.download">
 		<mkdir dir="${ivy.jar.dir}" />
-		<!-- download Ivy from web site so that it can be used even 
+		<!-- download Ivy from web site so that it can be used even
          without any special installation -->
 		<echo message="installing ivy..." />
 		<get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar" dest="${ivy.jar.file}" usetimestamp="true" />
@@ -190,8 +187,8 @@
 	<!-- Resolve dependencies -->
 	<target name="resolve" depends="install-ivy" description="--> retrieve dependencies with ivy">
 		<ivy:retrieve conf="build" pattern="${libs}/[artifact]-[type]-[revision].[ext]" />
-		<ivy:retrieve conf="analysis" pattern="${libs}/analysis/[artifact](-[classifier]).[ext]"/>	
-		
+		<ivy:retrieve conf="analysis" pattern="${libs}/analysis/[artifact](-[classifier]).[ext]"/>
+
 	</target>
 	<!-- End of 'Resolve dependencies -->
 
